# Logger

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Sequence.puml  imgui.ini  logger
Client/: a.out  client.cpp
src/: LogBuffer.h  WindowManager.h  main.cpp
src/core/: Entry.h  LogBuffer.cpp  LogBuffer.h
src/io/: FileLogger.cpp  FileLogger.h
src/net/: TcpLogServer.h
src/ui/: LoggerUI.h
tests/: debug_test.cpp  example_test.cpp  logbuffer_test.cpp
